@@ -29,7 +29,9 @@ kubectl delete -f personas/demo/secrets.yaml
 kubectl apply -f prod-skel/bases/minio-standalone/pvc.yaml
 kubectl apply -f prod-skel/bases/minio-standalone/svc.yaml
 kubectl apply -f prod-skel/bases/minio-standalone/deployment.yaml
+kubectl apply -f prod-skel/bases/minio-standalone/job.yaml
 
+kubectl delete -f prod-skel/bases/minio-standalone/job.yaml
 kubectl delete -f prod-skel/bases/minio-standalone/deployment.yaml
 kubectl delete -f prod-skel/bases/minio-standalone/svc.yaml
 kubectl delete -f prod-skel/bases/minio-standalone/pvc.yaml
